# manglua-definitions-generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: dump.rs  generator.rs  main.rs
