[package]
name = "manglua-definitions-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.4", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[[bin]]
name = "mlua-gen"
path = "src/main.rs"